--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  align-items: center;
+}
 .todo-container {
   background-color: #ffc0cb;
   padding: 20px;
   border-radius: 10px;
-  width: 300px;
-  min-height: 300px;
+  width: 200px;
+  min-height: 200px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .todo-title {
