--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Arial", sans-serif;
-  background-color: #ffece6;
+  background-color: #ffece64d;
 
   height: 100vh;
 }
@@ -69,6 +69,7 @@ code {
   background-color: aquamarine;
 }
 
+ */
 .is-done {
   opacity: 0.5;
-} */
+}
